--- a/src/global.scss
+++ b/src/global.scss
@@ -34,4 +34,14 @@
 
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
-@import "@ionic/angular/css/palettes/dark.system.css";
+// @import "@ionic/angular/css/palettes/dark.system.css";
+
+
+
+ion-content {
+  --background: var(--ion-color-medium);
+}
+
+.text-white {
+  color: white !important;
+}
