--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -31,13 +31,20 @@
           <h3 class="ion-no-margin text-white">Categories</h3>
         </ion-col>
 
-        <ion-col size="12">
-          <ion-card>
-            <ion-card-content>
-
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
+        @for (category of categories; track $index) {
+          <ion-col size="12">
+            <ion-card
+              class="d-flex new-card bg-black"
+              (click)="goToMealDetail(category)"
+            >
+              <img  [src]="category.strCategoryThumb" />
+              <ion-label>
+                <h4 class="font-bold ion-text-dark">{{category.strCategory}}</h4>
+              </ion-label>
+              <ion-icon name="chevron-forward-outline"></ion-icon>
+            </ion-card>
+          </ion-col>
+        }
       </ion-row>
     </ion-grid>
 
