--- a/src/app/shared/components/header-back/header-back.component.html
+++ b/src/app/shared/components/header-back/header-back.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar mode="ios">
+  <ion-toolbar mode="ios" color="dark">
     <ion-buttons slot="start" color="light">
       <ion-button (click)="goBack()" color="light">
         <ion-icon color="light" name="chevron-back-outline"></ion-icon>
