--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -6,7 +6,7 @@
   --ion-color-dark-rgb: 35,24,13;
   --ion-color-dark-contrast: #ffffff;
   --ion-color-dark-contrast-rgb: 255,255,255;
-  --ion-color-dark-shade: #1f150b;
+  --ion-color-dark-shade: #ffc409;
   --ion-color-dark-tint: #392f25;
 
   --ion-color-medium: #2d2013;
