--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -8,43 +8,68 @@
 
     <ion-grid>
       <ion-row>
-
         <ion-col size="12">
-          <ion-item>
-            <ion-input
-              color="medium"
-              mode="md"
-              label="Search Meal"
-              labelPlacement="floating"
-              placeholder="Search Meal"
-              debounce="500"
-              [(ngModel)]="search"
-            ></ion-input>
-            <ion-icon name="search-outline" color="medium"></ion-icon>
-          </ion-item>
+          <ion-card class="ion-no-margin" color="dark">
+            <ion-card-content class="padding-card">
+              <ion-item color="dark">
+                <ion-input
+                  color="warning"
+                  label="Search"
+                  labelPlacement="floating"
+                  placeholder="Type Meal"
+                  debounce="500"
+                  [(ngModel)]="search"
+                ></ion-input>
+                <ion-button mode="ios" color="warning">
+                  <ion-icon name="search-outline" color="dark"></ion-icon>
+                </ion-button>
+              </ion-item>              
+            </ion-card-content>
+          </ion-card>
+
         </ion-col>
       </ion-row>
   
       <ion-row>
   
-        <ion-col size="12">
-          <h3 class="ion-no-margin text-white">Categories</h3>
+        <ion-col size="12" class="ion-margin-top">
+          
+          <ion-accordion-group>
+            <ion-accordion value="first">
+              <ion-item slot="header" color="warning">
+                <ion-label>
+                  Categories
+                </ion-label>
+              </ion-item>
+
+              <div class="ion-padding ion-padding-none-top" slot="content">
+
+                @if(isLoadingCategories) {
+                  <div class="d-flex ion-justify-content-center ion-padding">
+                    <ion-spinner color="warning"></ion-spinner>
+                  </div>
+                }
+
+                @for (category of categories; track $index) {
+                  <ion-col size="12">
+                    <ion-card
+                      class="d-flex new-card bg-black"
+                      (click)="goToMealDetail(category)"
+                    >
+                      <img  [src]="category.strCategoryThumb" />
+                      <ion-label>
+                        <h4 class="font-bold ion-text-dark">{{category.strCategory}}</h4>
+                      </ion-label>
+                      <ion-icon name="chevron-forward-outline"></ion-icon>
+                    </ion-card>
+                  </ion-col>
+                }
+
+              </div>
+            </ion-accordion>
+          </ion-accordion-group>
         </ion-col>
 
-        @for (category of categories; track $index) {
-          <ion-col size="12">
-            <ion-card
-              class="d-flex new-card bg-black"
-              (click)="goToMealDetail(category)"
-            >
-              <img  [src]="category.strCategoryThumb" />
-              <ion-label>
-                <h4 class="font-bold ion-text-dark">{{category.strCategory}}</h4>
-              </ion-label>
-              <ion-icon name="chevron-forward-outline"></ion-icon>
-            </ion-card>
-          </ion-col>
-        }
       </ion-row>
     </ion-grid>
 
