add meal interface

--- a/src/global.scss
+++ b/src/global.scss
@@ -46,6 +46,10 @@ ion-content {
   color: white !important;
 }
 
+.text-warning {
+  color: var(--ion-color-warning) !important;
+}
+
 .d-flex {
   display: flex;
 }
