--- a/src/app/shared/components/header-back/header-back.component.html
+++ b/src/app/shared/components/header-back/header-back.component.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar mode="ios" color="dark">
-    <ion-buttons slot="start" color="light">
-      <ion-button (click)="goBack()" color="light">
-        <ion-icon color="light" name="chevron-back-outline"></ion-icon>
+    <ion-buttons slot="start" color="warning">
+      <ion-button (click)="goBack()" color="warning">
+        <ion-icon color="warning" name="chevron-back-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
 
@@ -11,7 +11,7 @@
         <img src="assets/images/logo-small.png" width="210px" alt="">
       </ion-title>
     } @else {
-      <ion-title class="text-white">
+      <ion-title class="text-warning">
         {{title}}
       </ion-title>
     }
