--- a/src/app/shared/components/header-home/header-home.component.html
+++ b/src/app/shared/components/header-home/header-home.component.html
@@ -5,5 +5,11 @@
       <img src="assets/images/logo-small.png" width="210px"  alt="">
     </ion-title>
    
+
+    <ion-buttons>
+      <ion-button fill="clear">
+        <ion-icon name="book-outline" color="warning"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
