--- a/src/global.scss
+++ b/src/global.scss
@@ -69,6 +69,9 @@ ion-content {
       color: var(--ion-color-medium);
       width: 80%;
     }
+    p {
+      color: var(--ion-color-medium);
+    }
   }
   img {
     width: auto;
