finish detail design

--- a/src/app/pages/index/index.page.scss
+++ b/src/app/pages/index/index.page.scss
@@ -16,8 +16,8 @@ ion-item {
 
 
 ion-accordion {
-  background: var(--ion-color-dark);
-  border-radius: 10px;
+  background: var(--ion-color-yellow);
+  border-radius: 6px;
 }
 
 
