--- a/src/global.scss
+++ b/src/global.scss
@@ -59,7 +59,7 @@ ion-content {
   margin: 0px;
   display: flex;
   align-items: center;
-  --background: #d57d1f;
+  --background: #f5cf55;
 
   ion-label {
     width: 100%;
