--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -13,7 +13,7 @@
     <ion-row>
       <ion-col size="12">
         @if (meal) {
-            <ion-card
+          <ion-card
             class="d-flex new-card bg-black"
           >
             <img  [src]="meal.strMealThumb" />
@@ -22,8 +22,66 @@
               <p>{{ meal.strCategory }}</p>
             </ion-label>
           </ion-card>
-        }
 
+          <ion-accordion-group >
+            <ion-accordion value="intructions" class="ion-margin-top">
+
+              <ion-item slot="header" color="warning">
+                <ion-label>
+                  <h2><b>Intructions</b></h2>
+                </ion-label>
+              </ion-item>
+
+              <div class="ion-padding ion-padding-none-top" slot="content">
+                <ion-label>
+                  {{meal.strInstructions}}
+                </ion-label>
+              </div>
+            </ion-accordion>
+
+            <ion-accordion value="ingredients" class="ion-margin-top">
+
+              <ion-item slot="header" color="warning">
+                <ion-label>
+                  <h2><b>Ingredients</b></h2>
+                </ion-label>
+              </ion-item>
+
+              <div class="ion-padding ion-padding-none-top" slot="content">
+                @for (ingredient of ingredients; track $index) {
+                  <ion-item lines="none" color="yellow">
+                    <ion-label slot="start">
+                      {{ ingredient.name }}
+                    </ion-label>
+  
+                    <ion-label slot="end">
+                      {{ ingredient.measure }}
+                    </ion-label>
+                  </ion-item>
+                }
+              </div>
+            </ion-accordion>
+          </ion-accordion-group>
+
+         
+          <ion-card class="ion-margin-top ion-no-margin" color="warning">
+            <ion-card-content>
+
+              <h2><b>Tags</b></h2>
+
+              @for (item of tags; track $index) {
+                <ion-badge color="secondary" class="ion-margin-end">
+                  {{item}}
+                </ion-badge>
+              }  @empty {
+                <p> There are no tags available. </p>
+              } 
+
+            </ion-card-content>
+          </ion-card>
+          
+
+        }
       </ion-col>
     </ion-row>
   </ion-grid>
