--- a/src/app/shared/components/header-home/header-home.component.html
+++ b/src/app/shared/components/header-home/header-home.component.html
@@ -7,7 +7,7 @@
    
 
     <ion-buttons>
-      <ion-button fill="clear">
+      <ion-button fill="clear" (click)="goHistory()">
         <ion-icon name="book-outline" color="warning"></ion-icon>
       </ion-button>
     </ion-buttons>
