--- a/src/app/pages/details/details.page.scss
+++ b/src/app/pages/details/details.page.scss
@@ -3,3 +3,8 @@ ion-accordion {
   background: var(--ion-color-yellow);
   border-radius: 6px;
 }
+
+a {
+  text-decoration: none;
+  color: var(--ion-color-warning);
+}
