fix track variable

--- a/src/app/pages/category/category.page.html
+++ b/src/app/pages/category/category.page.html
@@ -14,7 +14,7 @@
   <ion-grid>
     <ion-row>
 
-      @for (meal of meals; track $index) {
+      @for (meal of meals; track meal) {
         <ion-col size="12">
           <ion-card
             class="d-flex new-card bg-black"
