--- a/src/app/pages/history/history.page.html
+++ b/src/app/pages/history/history.page.html
@@ -15,7 +15,7 @@
             <ion-icon slot="end" name="caret-forward-outline" color="dark"></ion-icon>
           </ion-item>
         }  @empty {
-          <p class="text-white ion-text-center"> There are no items available. </p>
+          <p class="text-warning ion-text-center"> There are no items available. </p>
          } 
       </ion-col>
     </ion-row>
