--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -45,7 +45,7 @@
                   </div>
                 }
 
-                @for (category of categories; track $index) {
+                @for (category of categories; track category) {
                   <ion-col size="12">
                     <ion-card
                       class="d-flex new-card bg-black"
