--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -49,7 +49,7 @@
                   <ion-col size="12">
                     <ion-card
                       class="d-flex new-card bg-black"
-                      (click)="goToMealDetail(category)"
+                      (click)="goToMealsByCategory(category)"
                     >
                       <img  [src]="category.strCategoryThumb" />
                       <ion-label>
