--- a/src/app/pages/list/list.page.html
+++ b/src/app/pages/list/list.page.html
@@ -1,4 +1,4 @@
-<app-header-back [title]="categoryName"></app-header-back>
+<app-header-back [title]="name"></app-header-back>
 
 <ion-content class="ion-padding">
 
@@ -9,7 +9,6 @@
       <ion-spinner color="warning"></ion-spinner>
     </div>
   }
-
 
   <ion-grid>
     <ion-row>
