fix dont found on search

--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -82,7 +82,7 @@
           
 
         } @if (!meal && !isLoadingMealDetail) {
-          <p class="ion-text-center text-warning">No results found., <a routerLink="/index">go index</a></p>
+          <p class="ion-text-center text-white">No results found, <a routerLink="/index">go index</a></p>
         }
       </ion-col>
     </ion-row>
